--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,8 @@
 database:
+  # uri: "mongodb+srv://yeneinehseiba:<db_password>@lamebora.hlmxq.mongodb.net/?retryWrites=true&w=majority&tls=true"
   uri: "mongodb+srv://yeneinehseiba:<db_password>@lamebora.hlmxq.mongodb.net/?retryWrites=true&w=majority&tls=true"
+
+
   # uri: "mongodb://localhost:27017"
   name: "Loan"
 email:
